refactor: fixing getAllNews and getNewsByDistrict to be filtered by date